--- a/src/components/QualitySection.css
+++ b/src/components/QualitySection.css
@@ -1,10 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap");
 .quality-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
   margin: 30px 50px;
-  
 }
 .quality-item {
   font-family: "Montserrat";
@@ -13,71 +19,71 @@
   font-size: 20px;
   line-height: 22px;
   color: #000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   /* width: 350px; */
   text-align: start;
 }
-.quality-subheading{
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 300;
-font-size: 16px;
-/* line-height: 1rem; */
+.quality-subheading {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  /* line-height: 1rem; */
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  .quality-subheading{
+  .quality-subheading {
     display: none;
   }
-  .quality-item-heading{
+  .quality-item-heading {
     font-size: 10px;
   }
-  .quality-item-icon{
+  .quality-item-icon {
     margin-top: -12px !important;
   }
-  .quality-wrapper{
+  .quality-wrapper {
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 1rem;
   }
-  .collection-item-wrapper{
-    margin: 0; 
+  .collection-item-wrapper {
+    margin: 0;
   }
-  
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
 @media only screen and (max-width: 768px) {
-  .quality-subheading{
+  .quality-subheading {
     display: none;
   }
-  .quality-item-icon{
+  .quality-item-icon {
     margin-top: -12px !important;
   }
-  .collection-item-wrapper{
-    margin: 0; 
-  }
-  .collection-heading{
+  .collection-item-wrapper {
     margin: 0;
   }
-  .collection-item{
+  .collection-heading {
     margin: 0;
   }
-  
+  .collection-item {
+    margin: 0;
+  }
 }
-
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 1024px) {
- .quality-subheading{
-  font-size: 12px;
- }
- .quality-item-heading{
-  font-size: 15px;
- }
- .quality-item{
-  line-height: 15px;
- }
- .quality-item-icon{
-  /* font-size: 48px !important; */
- }
+  .quality-subheading {
+    font-size: 12px;
+  }
+  .quality-item-heading {
+    font-size: 15px;
+  }
+  .quality-item {
+    line-height: 15px;
+  }
+  .quality-item-icon {
+    /* font-size: 48px !important; */
+  }
 }
