--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,23 +7,37 @@
 
 .footer {
   position: relative;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   height: auto;
   padding: 50px 100px;
   background: #ecf4f4;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background: #ecf4f4;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 0;
   /* padding: 0; */
 }
 
 .footer .ft-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
 }
 
@@ -60,6 +74,8 @@
 
 .some {
   margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -72,8 +88,14 @@
   width: 40px;
   height: 40px;
   background: #222;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin-right: 10px;
   border-radius: 4px;
@@ -123,6 +145,8 @@
 }
 
 .contact .info li {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-bottom: 16px;
 }
@@ -155,6 +179,7 @@
   color: rgb(93, 93, 93);
   font-weight: 300;
   padding: 8px 40px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -164,6 +189,9 @@
   }
 
   .footer .ft-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
