--- a/src/components/Razorpay.css
+++ b/src/components/Razorpay.css
@@ -8,6 +8,7 @@
   font-size: 16px;
   border: 0px;
   cursor: pointer;
+  width: 100%;
 }
 @media screen and (max-width: 1024px) {
   .razorpaycss {
