--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -61,6 +61,9 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row;
+  column-gap: 3px;
+  justify-content: space-between;
+  align-items: center;
   /* border: 1px solid red; */
 }
 .card-product-detail {
@@ -169,6 +172,7 @@
 }
 .cart-detail-container {
   text-align: start;
+  margin-bottom: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -186,8 +190,6 @@
   font-weight: 600;
   font-size: 20px;
   line-height: 23px;
-}
-.cart-total-container {
 }
 
 .cart-total-header {
@@ -252,7 +254,7 @@
     width: 100% !important;
   }
   .delete-btn {
-    margin-left: 30px;
+    margin-left: 16px;
   }
   .add-heading-bold {
     overflow-y: hidden;
@@ -291,7 +293,7 @@
     width: 100% !important;
   }
   .delete-btn {
-    margin-left: 30px;
+    margin-left: 20px;
   }
   .add-heading-bold {
     overflow-y: hidden;
@@ -317,5 +319,58 @@
   }
   .change-add-btn {
     font-size: 10px;
+  }
+}
+
+.wish-detail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  text-align: start;
+  margin-left: 10px;
+  margin-top: 7px;
+}
+.wish-details {
+  margin-left: 5px;
+}
+.wish-img {
+  width: 98px;
+  height: 110px;
+  -webkit-box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.wish-text {
+  font-size: 14px;
+  font-size: large;
+}
+.del-icon {
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+  .wish-text {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .wish-text {
+    font-size: 12px;
+  }
+  .wish-img {
+    height: 90px;
+    width: 70px;
+    border-radius: 15px;
   }
 }
