--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -82,6 +82,7 @@
   font-size: 40px;
   line-height: 49px;
   margin: 50px;
+  margin-top: 100px;
   color: #000000;
 }
 .collection-item-wrapper {
@@ -258,7 +259,7 @@
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 768px) {
   .homepage-wrapper {
     overflow-x: hidden;
   }
@@ -311,5 +312,61 @@
     -ms-flex-pack: center;
     justify-content: center;
     overflow-x: hidden !important;
+  }
+  .collection-heading{
+    margin-top: 50px;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1350px){
+  .data-banner-container{
+    width: 290px;
+    height: 500px;
+    /* margin: 0 80px; */
+  }
+
+  .data-banner-container-ext{
+    width: 290px !important;
+    height: 550px !important;
+  } 
+
+  .data-banner{
+    height: 430px !important;
+    
+  }
+
+  .collection-item-text{
+    margin-top: 20px;
+    height: 60px
+  }
+
+  .collection-item-wrapper{
+    margin-bottom: 0px;
+  }
+
+  .collection-item{
+    margin-bottom: 60px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+  .data-banner-container{
+    width: 210px;
+    height: 450px;
+    margin: 0 20px !important;
+  }
+
+  .data-banner-container-ext{
+    width: 210px !important;
+    height: 450px !important;
+  } 
+
+  .data-banner{
+    height: 340px !important;
+  }
+
+  .collection-item{
+    flex-direction: row;
+    margin-bottom: 60px;
   }
 }
