--- a/src/pages/ParticularProduct.css
+++ b/src/pages/ParticularProduct.css
@@ -1,4 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
 .part-product-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -26,7 +35,7 @@
 }
 .product-image-section {
   /* border: 1px solid aqua; */
-  width: 50%;
+  width: 45%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -236,7 +245,7 @@
 }
 
 .product-detail-section {
-  width: 50%;
+  width: 53%;
   /* border: 1px solid aqua; */
   margin: 10px 10px;
 }
@@ -679,24 +688,66 @@
   .product-detail-section {
     padding: 1rem;
     margin: 10px 0;
-    width: 100%;
+    width: 630px;
   }
   .product-details-wrapper {
     margin: 10px 0;
+  }
+  .product-size-heading {
+    font-size: 20px;
   }
   .product-size-boxes {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     /* margin: 20px 5px; */
   }
-  .product-size-heading {
-    font-size: 20px;
-  }
   .product-size-item {
     font-size: 17px;
   }
 }
-@media only screen and (max-width: 700px) {
+
+/* -----Removed Inline CSS */
+.vertical-slider-item {
+  background-size: cover;
+  background-position: center;
+}
+.product-image-slider {
+  overflow: hidden;
+  height: 600px;
+}
+.particular-productimage {
+  height: 550px;
+  width: 500px;
+  background-size: cover;
+  background-position: center;
+}
+.try-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.tryon-lower-sec {
+  display: flex;
+  width: 400px;
+  justify-content: space-between;
+  padding: 10px 0px;
+}
+.uploadbtn {
+  cursor: pointer;
+  width: 150px;
+  overflow: hidden;
+}
+.button-content {
+  display: flex;
+  justify-content: center;
+}
+.selectSize {
+  margin-top: -15px;
+  margin-left: 5px;
+  color: red;
+}
+@media only screen and (max-width: 320px) {
   .section-one {
     padding: 0px;
     display: -webkit-box;
@@ -714,16 +765,57 @@
     -webkit-box-direction: reverse;
     -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
-    width: 437px;
-    height: 819px;
+    width: 300px;
+    height: 610px !important;
     margin: 0;
   }
+  .product-image-slider {
+    width: 98%;
+    height: 350px !important;
+  }
+  .particular-productimage {
+    height: 335px !important;
+  }
+  .product-size-item {
+    font-size: 10px !important;
+    margin-left: 1px;
+  }
   .tryon-lower-sec {
-    width: 320px !important;
+    width: 290px !important;
+  }
+  .button-content {
+    width: 290px;
+    font-size: 14px;
+    margin: 0px 20px;
+  }
+  .vertical-slider {
+    width: 310px;
+    margin: 15px 10px 0px 10px;
+  }
+  .product-detail-section {
+    width: 340px !important;
+  }
+  .product-details-wrapper {
+    width: 310px !important;
+  }
+  .product-manufac {
+    font-size: 16px;
+  }
+  .product-detail-heading {
+    font-size: 27px !important;
+    line-height: 36px;
+  }
+  /* .product-size-header {
+    width: 290px;
+    display: flex;
+    align-items: center;
+  } */
+  .product-favourite-icon {
+    margin-left: -2px;
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 425px) {
   .section-one {
     padding: 0px;
     display: -webkit-box;
@@ -741,20 +833,90 @@
     -webkit-box-direction: reverse;
     -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
-    width: 337px;
-    height: 819px;
+    width: 325px !important;
+    height: 610px !important;
     margin: 0;
+  }
+  .product-image-slider {
+    width: 332px !important;
+    height: 350px !important;
+  }
+  .particular-productimage {
+    width: 298px !important;
+    height: 335px !important;
   }
   .product-size-item {
     font-size: 15px !important;
   }
   .tryon-lower-sec {
-    width: 320px !important;
+    width: 290px !important;
+  }
+  .button-content {
+    width: 290px !important;
+    font-size: 14px !important;
+    margin: 0px 20px;
+  }
+  .vertical-slider {
+    width: 310px !important;
+    margin: 15px 10px 0px 10px;
+  }
+  .product-detail-heading {
+    font-size: 32px;
+    line-height: 36px;
+  }
+
+  /* .product-size-header {
+    width: 90% !important;
+    display: flex;
+    align-items: center;
+  }  */
+
+  .product-favourite-icon {
+    margin-left: 0px;
+  }
+  .product-detail-section {
+    width: 368px;
+  }
+  .product-details-wrapper {
+    width: 350px !important;
   }
 }
-@media only screen and (max-width: 340px) {
-  .product-size-item {
-    font-size: 10px !important;
-    margin-left: 1px;
+
+@media only screen and (max-width: 768px) {
+  .section-one {
+    padding: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0px;
+  }
+  .product-image-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    width: 599px;
+    height: 856px;
+    margin: 0;
+  }
+  .product-accordion {
+    margin-left: 20px;
+  }
+  .button-content {
+    width: 540px;
+    font-size: 20px;
+  }
+  /* .product-size-header {
+    display: flex;
+  } */
+  .tryon-lower-sec {
+    width: 500px;
   }
 }
