--- a/src/pages/TrackOrder.css
+++ b/src/pages/TrackOrder.css
@@ -1,6 +1,7 @@
 .track-container {
   /* max-width: 60vw; */
   font-family: "Montserrat";
+  margin-bottom: 80px;
 }
 .track-grid {
   display: -webkit-box;
@@ -16,7 +17,7 @@
   width: 100px;
   height: 100px;
   border-radius: 10px;
-  margin-top: 2.4rem;
+  /* margin-top: 2.4rem; */
   /* background-image: url("../images/banner1.png"); */
   background-image: url("");
   background-size: contain;
@@ -58,11 +59,15 @@
 }
 .titem-detail-wrap {
   width: 600px;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
 }
 .titem-detail {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  /* justify-content: space-between; */
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
@@ -70,10 +75,11 @@
   margin: 10px;
 }
 .titem-card-detail {
-  margin: 20px 20px;
+  margin: 0 0 0 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  align-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -111,9 +117,7 @@
 .detail.icon {
   font-size: 20px;
 }
-.titem-header {
-  width: 600px !important;
-}
+
 @media only screen and (min-width: 1024px) {
   .titem-header {
     width: auto !important;
@@ -123,20 +127,64 @@
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .track-container {
-    max-width: inherit;
-    /* max-width: 0px !important; */
-  }
-  .titem-header {
+/* code replaced by prince  */
+
+@media only screen and (max-width: 550px) {
+  /* .track-container { */
+  /* max-width: inherit; */
+  /* max-width: 0px !important; */
+  /* } */
+  /* .titem-header {
     width: 400px !important;
+  } */
+
+  .titem-card {
+    margin: 10px;
+  }
+
+  .box {
+    font-size: 15px;
+  }
+
+  .titem-img {
+    width: 75px;
+    height: 75px;
+  }
+
+  .cancel-btn {
+    padding: 5px 10px;
+  }
+
+  .titem-card-detail {
+    margin: 0 0 0 10px;
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 599px) {
-  .track-container {
+@media only screen and (max-width: 375px) {
+  .box {
+    font-size: 12px;
+  }
+
+  .titem-img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .cancel-btn {
+    padding: 3px 6px;
+    font-size: 12px;
+  }
+
+  span {
+    font-size: 15px;
+  }
+}
+
+/* old code  */
+
+@media only screen and (min-width: 320px) and (max-width: 425px) {
+  /* .track-container {
     max-width: inherit;
-    /* max-width: 0px !important; */
   }
   .titem-header {
     width: 200px !important;
@@ -161,5 +209,5 @@
   .detail-icon {
     font-size: 16px !important;
     margin-right: 2px !important;
-  }
+  } */
 }
