--- a/src/components/Razorpay.css
+++ b/src/components/Razorpay.css
@@ -2,20 +2,21 @@
   text-transform: uppercase;
   padding: 18px 18px;
   background: #b2eeee;
-  border-radius: 25px;
+  border-radius: 15px;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
   border: 0px;
   cursor: pointer;
   width: 100%;
+  border: 1px solid black;
 }
 @media screen and (max-width: 1024px) {
   .razorpaycss {
     text-transform: uppercase;
     padding: 18px 14px;
     background: #b2eeee;
-    border-radius: 25px;
+    border-radius: 15px;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
