--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 
 :root {
   --brand-color: #0d99ff;
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
 }
 
 .login-wrapper {
@@ -55,7 +55,7 @@ body {
 }
 
 .login-title {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
@@ -123,7 +123,7 @@ body {
   justify-content: center;
   /* align-items: center; */
   font-weight: 700;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-size: 20px;
   margin: 20px 0px;
   padding: 10px 0px !important;
@@ -212,7 +212,7 @@ body {
   -ms-flex-pack: center;
   justify-content: center;
   font-weight: 700;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   cursor: pointer;
 }
 
@@ -246,7 +246,47 @@ body {
   color: var(--third-color);
   cursor: pointer;
 }
+@media only screen and (max-width: 320px) {
+  .login-google,
+  .login-btn-login {
+    font-size: 10px !important;
+    /* border: 1px solid red; */
+    width: 60% !important;
+  }
+  .signup-section {
+    font-size: 13px !important;
+  }
+  .login-tyc-wrapper-span {
+    font-size: 13px !important;
+  }
+  .login-tyc-wrapper {
+    font-size: 12px !important;
+  }
+  .privacy {
+    font-size: 12px !important;
+  }
+}
 
+@media only screen and (max-width: 425px) {
+  .login-google,
+  .login-btn-login {
+    font-size: 10px !important;
+    /* border: 1px solid red; */
+    width: 60% !important;
+  }
+  .signup-section {
+    font-size: 15px;
+  }
+  .login-tyc-wrapper-span {
+    font-size: 15px;
+  }
+  .login-tyc-wrapper {
+    font-size: 14px;
+  }
+  .privacy {
+    font-size: 14px;
+  }
+}
 @media only screen and (max-width: 900px) {
   .login-google,
   .login-btn-login {
